correcting some spacing

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,6 +1,6 @@
 .cards {
   padding-top: 20px;
-  margin: 20px auto auto;
+  margin: auto auto;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
@@ -17,6 +17,7 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
-    padding: 0 0 20px 0;
+    padding: 0 0 20px;
+    gap: 20px;
   }
 }
